# mlops-via-ssh

./: .gitignore  README.md  colab.py  docker-compose.yml  dockerfile  model.sav  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: build-and-deploy.yml
api/: iris.py
app/: main.py
